# tokenfinops

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
src/tokenfinops/: config.py  main.py  setup_wizard.py
src/tokenfinops/dashboard/: api.py
src/tokenfinops/dashboard/static/: app.js  index.html  style.css
src/tokenfinops/embeddings/: base.py  cohere_embeddings.py  ollama_embeddings.py  openai_embeddings.py  registry.py  sentence_transformers.py
src/tokenfinops/engine/: batch_scheduler.py  budget_manager.py  context_trimmer.py  cost_predictor.py  kv_cache_manager.py  model_router.py  pipeline.py  prompt_optimizer.py  rate_limiter.py  semantic_cache.py  smart_retry.py
src/tokenfinops/gateway/: middleware.py  router.py  schemas.py
src/tokenfinops/intelligence/: anomaly_detector.py  complexity_scorer.py  cost_forecaster.py  quality_predictor.py  recommendation.py
src/tokenfinops/models/: base.py  budget.py  cache_entry.py  recommendation.py  usage.py
src/tokenfinops/observability/: metrics.py  tracing.py
src/tokenfinops/providers/: anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  registry.py  vllm_provider.py
